dotnet/Audit.Service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
spec:
  selector:
    matchLabels:
      app: audit-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: randomquotes
          image: octopussamples/octopub-audits:0.1.219
          ports:
            - name: web
              containerPort: 9080
          resources:
            limits:
              memory: 1024Mi
              cpu: "500m"
            requests:
              memory: 512Mi
              cpu: "250m"
