dotnet/Audit.Service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-service
spec:
  selector:
    app: audit-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9080
