dotnet/Audit.Service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/audits
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
          - path: /health/audits
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80
